# ELCO-machina

./: .gitignore  API-CONTRACTS.md  ARCHITECTURE.md  AUDIT_REPORT_20260205.md  App.tsx  CLAUDE.md  GEMINI.md  ISSUES.md  PLAN-BACKEND-PARALLEL.md  PLAN-PROMPT-EDITOR.md  PLAN-TTS.md  PLAN.md  README.md  SESSION_CONTEXT.md  adk_agent_list.json  composer.json  gemini-conversation-1770954694186.json  gemini_assistant_report.xml  index.html  index.tsx  metadata.json  package-lock.json  package.json  proatt.keystore  tailwind.config.js  tsconfig.json  vite.config.laravel.ts
.serena/: project.yml
.venv-agents/: pyvenv.cfg
adk_agents/: requirements.txt  serve.py  server_setup.py  sniffer.py
adk_agents_new/: run_server.py
adk_agents_new/frontend_standard_agent/: agent.py
adk_agents_new/shared/: tools.py
adk_agents_new/tauri_build_agent/: agent.py
app/Enums/: OutputStyle.php  RecordingStyle.php  TranscriptionStatus.php
app/Jobs/: ProcessTranscription.php
config/: voice.php
docs/: F5-TTSPT-BR.txt  FTT5.md  Qwen3-TTS.md  TAURI_CONVERSION_PLAYBOOK.md  XTTS-deps-image.md  architecture-review-2026-02-11.md  datadog-modal-dashboard.json  modal-whisper-benchmark.md  ref_ptbr_male.txt  script-deps.md  teste-fullstack-arq-dev  xtts-official-doc.md  xtts_v2_reference.md
modal_functions/: __init__.py  tts_chatterbox.py
resources/js/: app.js
routes/: web.php
rules/: linear-issue-tracking.md
scripts/: build-android.sh  build-linux.sh  build-windows.ps1  modal_f5tts_bench.py  modal_tts_chatterbox.py  modal_tts_qwen_native.py  modal_tts_qwen_vllm.py  modal_tts_qwen_vllm_snap.py  modal_voice_analyzer.py  modal_whisper_bench.py  modal_whisper_http.py  modal_whisper_offline.py  modal_whisper_vllm.py  modal_xtts_bench.py  modal_xtts_serve.py  publish-android-update.sh  publish-update.sh  test_tts_batch.py  test_tts_chatterbox.py  test_tts_chatterbox_noref.py  test_tts_qwen.py  test_voicedesign.py  voicedesign_client.py
sidecar/: build-sidecar.sh  requirements.txt  run-dev.sh  start_sidecar.sh  test_refiner_quality.ipynb  voice-ai.service  voice_ai.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
temp-figma/: ActionPanel.tsx  GlobalContext.tsx  SettingsModal.tsx
(+175 files in other folders)
